<resources>
    <string name="app_name">Herramienta del mayordomo</string>
    <string name="my_mail">atstincer87@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Hab">Hab</string>
    <string name="numero_de_habitacion">Número de habitación</string>
    <string name="reportes">Reportes</string>
    <string name="cortesias">Cortesías</string>
    <string name="reserva_restaurant">Reservas de restaurante</string>
    <string name="obs">Observaciones</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>

    <string name="noches">Noches:</string>
    <string name="familyName_id">A nombre de</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>


    <string name="adultos">adultos</string>
    <string name="adulto">adulto</string>
    <string name="menores">menores</string>
    <string name="infantes">infantes</string>
    <string name="nombre">Nombre</string>
    <string name="origen_pais">País de origen</string>
    <string name="origen_ciudad">Ciudad</string>
    <string name="dob">Fecha de nacimiento</string>
    <string name="pass_ci">Pasaporte/CI</string>
    <string name="search_box_hint">Buscar</string>



    <!-->ESTANCIAS</-->
    <string name="estancias">Estancias</string>
    <string name="estancia">Estancia</string>
    <string name="nueva_estancia">Nueva estancia</string>
    <string name="actualizar_estancia">Actualizar estancia</string>
    <string name="no_estancias_registradas">No hay estancias registradas</string>
    <string name="casa">Casa</string>
    <string name="segun_cliente">Según cliente</string>
    <string name="cliente">Cliente</string>
    <string name="segun_periodo">Según período</string>
    <string name="periodo">Período</string>
    <string name="segun_hab">Según habitación</string>
    <string name="confirmar_eliminar_estancia">Seguro que desea eliminar esta estancia?</string>



    <!-->CLIENTES</-->
    <string name="clientes">Clientes</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="info_cliente_title">Información del cliente</string>
    <string name="actualizar_cliente_title">Actualizar cliente</string>
    <string name="preferencias">Preferencias</string>
    <string name="limitaciones">Limitaciones</string>


    <!-->FAMILIAS</-->
    <string name="familias">Familias</string>
    <string name="familia">Familia</string>
    <string name="nombre_de_familia">Nombre de familia</string>
    <string name="nueva_familia">Nueva familia</string>
    <string name="editar_nombre_de_familia">Editar nombre de familia</string>
    <string name="no_existen_nombres_de_familia_registrados">No existen nombres de familia registrados</string>
    <string name="confirmar_eliminar_nombre_familias">Seguro que desea eliminar este nombre de familia?</string>


    <!-->MENSAJES DE CONFIRMACION</-->
    <string name="no_se_pudo">No se pudo realizar la operación</string>
    <string name="registro_correcto">Registrado correctamente</string>
    <string name="actualizacion_correcta">Actualizado correctamente</string>
    <string name="registro_eliminado_correctamente">Registro eliminado correctamente</string>
    <string name="confirmar_eliminar_registro">Seguro que desea eliminar este registro?</string>
    <string name="no_existen_clientes_asosiados">No existen clientes asociados</string>
    <string name="no_existen_clientes_registrados">No existen clientes registrados</string>
    <string name="no_existen_reportes">No existen reportes registrados</string>


    <!-->Mensages de ERROR</-->
    <string name="la_fecha_no_es_correcta">La fecha no es correcta</string>
    <string name="debe_introducir_numero_de_hab">Debe introducir número de habitación</string>
    <string name="debe_introducir_a_nombre_de_quien">Debe introducir a nombre de quién se hace la reserva</string>
    <string name="debe_introducir_numero_de_adultos">La reserva debe tener al menos un adulto</string>
    <string name="no_camara_disponible">Su dispositivo no soporta esta opción</string>
    <string name="debe_introducir_un_nombre_de_familia">Debe introducir un nombre de familia</string>
    <string name="debe_seleccionar_al_menos_dos_clientes">"Debe seleccionar al menos dos clientes"</string>

    <!-->FECHAS</-->
    <string name="al">al</string>


    <!-->BOTONES</-->
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ir">Ir</string>
    <string name="guardar">Guardar</string>
    <string name="registrar">Registrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="administrar_clientes_relacionados">Administrar clientes relacionados</string>
    <string name="seleccionar_clientes_relacionados">Seleccionar cliente</string>
    <string name="eliminar">Eliminar</string>

    <!-->MENUS</-->
    <string name="en_casa">En casa</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="selecionar_foto_galeria">Seleccionar foto</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="agregar_reporte">Agregar reporte</string>

    <!-->REPORTE</-->
    <string name="reporte_mañana">Mañana</string>
    <string name="reporte_tarde">Tarde</string>
    <string name="reporte_noche">Noche</string>
    <string name="new_reporte">Nuevo reporte</string>
    <string name="reporte_no_valido">Debe llenar al menos uno de los campos</string>
    <string name="varios_reportes_misma_fecha">Existe más de un reporte con la misma fecha</string>
    <string name="confirmar_eliminar_reporte">Seguro que desea eliminar el reporte?</string>
    <string name="llegando_el">Llegando el </string>
    <string name="enviar_por_mail">Enviar por mail</string>
    <string name="guardar_archivo_txt">Guardar en txt</string>
    <string name="no_aplicacion_disponible">No hay aplicación que soporte esta acción</string>
    <string name="archivo_creado">Archivo creado</string>
    <string name="tarjetasd_no_disponible">La tarjeta SD no está disponible</string>
    <string name="tarjetasd_no_writable">No se puede guardar el fichero en la tarjeta SD</string>
    <string name="compartir">Compartir</string>
    <string name="enviar_por_defecto_a">Enviar reporte por defecto a:</string>
    <string name="escribir_aqui_mail">Escribir aquí la dirección de e-mail</string>
    <string name="mail_no_valido">Dirección de e-mail no válida</string>
    <string name="numero_dias_no_valido">El número de días no es válido</string>


    <!-->RECORDATORIOS</-->
    <string name="recordatorios">Recordatorios</string>
    <string name="recordatorio_estancia_futuro">Recordatorio estancias</string>
    <string name="explicacion_recordatorio_estancia">"Añade recordatorio a estancias\npor llegar según el tiempo de\nantelación especificado"</string>
    <string name="cuantos_dias_antelacion">Días de antelación</string>
    <string name="agregar_recordatorio">Agregar recordatorio</string>
    <string name="escriba_mensaje">Escriba aquí el mensaje</string>
    <string name="debe_agregar_msj">Debe agregar un mensaje</string>
    <string name="debe_seleccionar_una_fecha">Debe seleccionar una fecha</string>
    <string name="recordatorio_general">Recordatorio general</string>
    <string name="recordatorio_agregado">Recordatorio agregado</string>
    <string name="no_recordatorios_registrados">No existen recordatorios registrados</string>
    <string name="confirmar_eliminar_recordatorio">Seguro que desea eliminar este recordatorio?</string>


    <!-->AJUSTES</-->
    <string name="ajustes">Ajustes</string>

    <!-->OTROS</-->
    <string name="si_minuscula">si</string>
    <string name="no_minuscula">no</string>

</resources>
