<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="@string/estancias">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_item_nueva_estancia"
                    android:icon="@drawable/ic_add_estancia"
                    android:title="@string/nueva_estancia" />
                <item
                    android:id="@+id/nav_item_estancias"
                    android:icon="@drawable/en_casa"
                    android:title="@string/estancias" />
            </group>
        </menu>
    </item>

    <item android:title="@string/clientes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_item_nuevo_cliente"
                    android:icon="@drawable/ic_add_cliente"
                    android:title="@string/nuevo_cliente" />
                <item
                    android:id="@+id/nav_item_clientes"
                    android:icon="@drawable/ic_cliente"
                    android:title="@string/clientes" />
                <item
                    android:id="@+id/nav_item_family_names"
                    android:icon="@drawable/ic_family_names"
                    android:title="@string/familias" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_recordatorios"
            android:icon="@drawable/ic_recordatorios"
            android:title="@string/recordatorios" />

        <item
            android:id="@+id/nav_item_reportes"
            android:icon="@drawable/reporte"
            android:title="@string/reportes" />

        <item
            android:id="@+id/nav_item_ajustes"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/ajustes" />
    </group>

</menu>
