<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_backgroundActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_foto_cliente"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cliente" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_firstItem_linearLayout"
            android:hint="@string/nombre"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_item_linearLayout"
            android:hint="@string/pass_ci"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_origenPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_item_linearLayout"
            android:hint="@string/origen_pais"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_origenCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_item_linearLayout"
            android:hint="@string/origen_ciudad"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_item_linearLayout"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/dob"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />


        <TextView
            android:id="@+id/et_preferencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/preferencias"
            android:textColor="@color/link"
            android:textSize="@dimen/tvSize"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/et_limitaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/limitaciones"
            android:textColor="@color/link"
            android:textSize="@dimen/tvSize"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/et_obs_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/obs"
            android:textColor="@color/link"
            android:textSize="@dimen/tvSize"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>


        <Button
            android:id="@+id/btn_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop_btn_bottomLinearLayout"
            android:background="@drawable/mi_btn_background"
            android:elevation="5dp"
            android:shadowRadius="10"
            android:text="@string/registrar"
            android:textColor="@color/color_font_blanco"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>


