<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_backgroundActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_no_hab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Hab"
        android:inputType="number"
        android:textColor="@color/color_font_blanco"
        android:textColorHint="@color/color_font_blanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desde"
            android:textColor="@color/color_font_blanco"
            android:textSize="@dimen/tvSize" />

        <TextView
            android:id="@+id/tv_desde_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/seleccionar_fecha"
            android:textColor="@color/link"
            android:textSize="@dimen/tvSize" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_hasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasta"
            android:textColor="@color/color_font_blanco"
            android:textSize="@dimen/tvSize" />

        <TextView
            android:id="@+id/tv_hasta_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/seleccionar_fecha"
            android:textColor="@color/link"
            android:textSize="@dimen/tvSize" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/familyName_id"
        android:textColor="@color/color_font_blanco"
        android:textColorHint="@color/color_font_blanco" />

    <LinearLayout
        android:id="@+id/layout_pax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/et_adultos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/adultos"
            android:inputType="number"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_menores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:hint="@string/menores"
            android:inputType="number"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <EditText
            android:id="@+id/et_infantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:hint="@string/infantes"
            android:inputType="number"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_clientes_vinculados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/no_pax_vinculado"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize" />

    <Button
        android:id="@+id/btn_estancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTop_btn_bottomLinearLayout"
        android:background="@drawable/mi_btn_background"
        android:elevation="5dp"
        android:shadowRadius="10"
        android:text="@string/registrar"
        android:textColor="@color/color_font_blanco"
        android:textStyle="bold" />

</LinearLayout>