<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_backgroundActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_family_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_familia"
            android:textColor="@color/color_font_blanco"
            android:textColorHint="@color/color_font_blanco" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_no_clientes_asosiados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_existen_clientes_asosiados"
                android:textColor="@color/link"
                android:textSize="@dimen/tvSize"
                android:visibility="gone" />

            <include layout="@layout/recyclerview_clientes" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_admin_clientes_relacionados"
            style="@style/AppBtnRegular"
            android:text="@string/administrar_clientes_relacionados" />

        <Button
            android:id="@+id/btn_family_name"
            style="@style/AppBtnRegular"
            android:layout_marginTop="10dp"
            android:text="@string/registrar" />

    </LinearLayout>

</ScrollView>