<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_estancia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_backgroundActivity"
    tools:context="com.example.usuario.herramientadelmayordomoi.UI.EstanciaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estancia_title"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        android:textColor="@color/color_font_blanco"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hab"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:id="@+id/text_hab"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/text_hab"
        android:id="@+id/tv_no_hab"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desde"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/text_hab"
        android:id="@+id/text_desde"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha IN"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_toRightOf="@id/text_desde"
        android:layout_below="@id/text_hab"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_desde"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasta"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/text_desde"
        android:id="@+id/text_hasta"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha OUT"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_toRightOf="@id/text_hasta"
        android:layout_below="@id/text_desde"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_hasta"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noches"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/text_hasta"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text_noches"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/text_hasta"
        android:layout_toRightOf="@+id/text_noches"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/tv_no_noches"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre y Apellidos"
        android:textColor="@color/color_font_blanco"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/text_noches"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_family_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportes"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_family_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_reportes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cortesias"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_reportes"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_cortesias"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordatorios"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_cortesias"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_recordatorios"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserva_restaurant"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_recordatorios"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_reservas_resto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obs"
        android:textColor="@color/link"
        android:textSize="@dimen/tvSize"
        android:layout_below="@+id/tv_reservas_resto"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_obs"/>


</RelativeLayout>
